--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* -- Header --*/ 
 
 .header {
     padding: 20px;
@@ -56,6 +57,7 @@ p {
     font-size: 16px;
 }
 
+/* -- Hero --*/ 
 .hero {
     height: 800px;
     width: 100%;
@@ -81,6 +83,8 @@ p {
     margin-left: 20px;
 }
 
+
+/* -- Benifits --*/ 
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -140,6 +144,7 @@ p {
     max-width: 150px;
 }
 
+/* -- Navigation --*/ 
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -194,6 +199,7 @@ p {
     font-size: 36px;
 }
 
+/* -- Footer --*/ 
 .footer {
     padding: 30px;
     clear: both;
